# iodine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  run.sh  vcpkg.json
CMake/: functions.cmake
Iodate/: CMakeLists.txt  CMakeSettings.json  Makefile  vcpkg.json
Iodate/Iodate/: Application.cc  Application.h  CMakeLists.txt  Main.cc  Makefile  Window.cc  Window.h
Iodine/: CMakeLists.txt  Makefile
Iodine/Core/: CMakeLists.txt  Makefile
Iodine/Core/Engine/: CMakeLists.txt  Engine.cc  Engine.h
Iodine/Core/GraphicsAPI/: CMakeLists.txt  Image.h  Makefile  Rand.h  Utils.cc  cmake_install.cmake
Iodine/Core/Renderer/: CMakeLists.txt  Camera.h  CubeObject.cc  CubeObject.h  Makefile  Object.h  Renderer.cc  Renderer.h  SphereObject.cc  SphereObject.h  TriangleObject.cc  TriangleObject.h  triangle_frag.glsl  triangle_vtx.glsl
Iodine/Core/Shaders/: CMakeLists.txt  Makefile  Shader.cc  Shader.h
Iodine/Iodine/Core/: CMakeLists.txt
Iodine/Iodine/Core/Renderer/: CMakeLists.txt  Object.h  Renderer.cc  SphereObject.cc  SphereObject.h  TriangleObject.cc  TriangleObject.h  triangle.fs  triangle.vs
Iodine/Iodine/Core/Shaders/: CMakeLists.txt  Shader.cc  Shader.h
Iodine/Iodine/Core/Utils/: CMakeLists.txt  Utils.cc
Iodyn/Iodyn/: CMakeLists.txt
Iodyn/Iodyn/Core/: CMakeLists.txt
Iodyn/Iodyn/Core/Renderer/: CMakeLists.txt  Object.h  Renderer.cc  Renderer.h  SphereObject.h
Iodyn/Iodyn/Core/Utils/: CMakeLists.txt  Image.h  Rand.h
python/: HandDTTR.model  classify.py  config.py  data.py  main.py  model.py  requirements.txt  train.py
python/data/: 000015774_01_l.json
python/scripts/: download_dataset.sh
